--- a/rails/_i18n.md
+++ b/rails/_i18n.md
@@ -1,8 +1,16 @@
 # i18n
+
+- `I18n.t` / `I18n.translate` / `t` - 訳文を参照する
+- `I18n.l` / `I18n.localize` / `l` - DateオブジェクトやTimeオブジェクトを現地フォーマットに変換する
+
 ```ruby
-I18n.t 'store.title' # 訳文を参照
-I18n.l Time.now # DateオブジェクトやTimeオブジェクトを現地フォーマットに変換
+I18n.t('activerecord.attributes.book.title')
+I18n.l(Time.now)
 ```
+
+#### `t`メソッドのオプション
+- `:default` - 見つからなかった場合に表示する文字を指定 (非表示にしたい場合はnilではなく空文字を渡す)
+- `:raise` - 見つからなかった場合に送出する例外を指定
 
 ## 参照
 - [Rails 国際化 (i18n) API](https://railsguides.jp/i18n.html)
