--- a/activities/202305_rubykaigi/implementations/_2.md
+++ b/activities/202305_rubykaigi/implementations/_2.md
@@ -24,6 +24,13 @@ i.__plusplus__("i", binding)
 #### parse.y
 
 ```c
+// トークンの追加
+%token <id> tINCOP_ASGN "increment-operator-assignment" /* ++ */
+
+// トークンの優先度の定義
+%right '=' tOP_ASGN tINCOP_ASGN
+
+// 構文解析
 method_call : // ...
             | primary_value lex_ctxt tINCOP_ASGN
             {
@@ -60,19 +67,6 @@ method_call : // ...
               nd_set_line($$, @3.end_pos.lineno);
               /*% %*/
             }
-
-// やること
-//   newtok(p);
-//   tokadd_mbchar(p, 's');
-//   tokadd_mbchar(p, 'e');
-//   tokadd_mbchar(p, 'l');
-//   tokadd_mbchar(p, 'f');
-//   tokfix(p);
-//   const struct kwtable *kw;
-//   kw = rb_reserved_word(tok(p), toklen(p));
-//   enum lex_state_e state = p->lex.state;
-//   SET_LEX_STATE(kw->state);
-//   p->command_start = TRUE;
 ```
 
 ```c
