--- a/network/docs/_rfc8305.md
+++ b/network/docs/_rfc8305.md
@@ -3,9 +3,10 @@
   IPv6の使用を優先しつつ複数の接続を並行してより早く接続を確立するための手法
 
 #### Happy Eyeballs Connection Setup
-1. 非同期DNSクエリの開始
-2. 解決された宛先アドレスを優先順に並べ替える
-3. 一つの接続を確立した後、他のすべての接続をキャンセルする
+1. Initiation of asynchronous DNS queries (非同期DNSクエリの開始)
+2. Sorting of resolved destination addresses (解決された宛先アドレスを優先順に並べ替える)
+3. Initiation of asynchronous connection attempts (非同期接続試行の開始)
+4. Establishment of one connection, which cancels all other attempts (接続確立後、他の接続をキャンセルする)
 
 ### Hostname Resolution Query Handling
 - クライアントがIPv4 / IPv6デュアルスタックである場合、AAAAレコードとAレコード両方にクエリを送信する
@@ -13,7 +14,7 @@
 - [SHOULD] 両方の回答が返ってくるのを待ってからコネクション確立を試行するべきではない
 - [SHOULD] クライアントはDNS解決を非同期で行う
   - クライアントが非同期DNS APIを持たない場合:
-    アドレスファミリごとに一つずつ、異なるスレッドで二つの別々の同期クエリを行う
+    アドレスファミリごとに一つずつ別スレッドを生成し、それぞれに同期クエリを行うこと
 
 #### アルゴリズム
 - フルリゾルバから最初に有効なAAAA応答を受信した場合、クライアントは最初のIPv6接続を直ちに試行する
@@ -36,6 +37,27 @@
 - [SHOULD] クライアントは設定可能なDNSサーバーの数に明示的な制限を設けるべきではない
   - [SHOULD] ハードウェアの制限により制限が必要な場合、クライアントは利用可能なリストのうち
     各アドレスファミリから少なくとも一つのアドレスを使用する
+
+### Sorting Addresses
+- クライアントは、解決された宛先アドレスのいずれかに接続を試みる前に、接続を試行する順序を定義する
+- [MUST] クライアントは、この時点までに受信したアドレスを接続を試行する順にソートする
+  - RFC 6724のDestination Address Selection rulesを適用する
+  - [SHOULD] クライアントがステートフルで、各アドレスへアクセスする際の経路の予想RTTの履歴がある場合、
+    「RTTがより低いアドレスを優先する」というルールをルール8とルール9の間に追加する
+  - [SHOULD] クライアントが過去にどのアドレスを使用したかの記録を持っている場合、
+    「未使用のアドレスよりも使用したアドレスを優先する」というルールを上記のルールとルール9の間に追加する
+    - 認証時にクライアントのIPアドレスを使用するサーバ (TCP Fast OpenやHTTP Cookieを利用しているもの) に有効
+  - [MUST] 上記の履歴は異なるネットワークインターフェースで使用しない
+  - [SHOULD] 上記の履歴はデバイスが接続するネットワークを変更するたびにフラッシュする
+- [SHOULD] クライアントはアドレスファミリをinterleaveするように順序付きリストを変更する
+  - リストの最初のアドレスがIPv6である場合、リストの2番目が最初のIPv4アドレスになるようにリストを調整する
+- [MAY] 一つのアドレスファミリの複数のアドレスを試した上で他のファミリの試行を許可することにより、
+  一つのアドレスファミリを優先することができる
+  - 最初のアドレスファミリの連続したアドレスの数をFirst Address Family Countと呼ぶ
+  - First Address Family Countは設定可能な値として扱うことができる
+    - この設定値は、あるアドレスファミリの接続性が損なわれているような場合において
+      そのファミリのアドレスを全て試行するために長時間待機するような事態を避けるために必要とされる
+- RFC 6724のDestination Address Selection rulesは宛先アドレスごとに一回実行される
 
 ## 参照
 - https://datatracker.ietf.org/doc/html/rfc8305
