--- a/network/docs/_rfc8305.md
+++ b/network/docs/_rfc8305.md
@@ -59,6 +59,32 @@
       そのファミリのアドレスを全て試行するために長時間待機するような事態を避けるために必要とされる
 - RFC 6724のDestination Address Selection rulesは宛先アドレスごとに一回実行される
 
+### Connection Attempts
+- アドレスのリストを構築できたらクライアントは接続を試行する
+- [SHOULD] 接続試行は複数同時に行わない (過剰なネットワーク負荷を避けるため)
+  - まず最初のアドレスへの接続を開始し、その後にリストの他のアドレスを一つずつ試行する
+  - ひとつ前の接続の状況に関わらず、新しい接続を開始することができる (複数の接続試行を並行可能)
+- [SHOULD] 一つの接続が成功 (TCPハンドシェイクが完了) したら、他の接続はキャンセルする
+  - [SHOULD] まだ接続試行を開始していないアドレスは無視する
+  - [MAY] この時点で当該接続には新しいアドレスが使用されないため、非同期DNSクエリはキャンセルできる
+    - [SHOULD] クライアントリゾルバはDNS応答を短時間 (推奨値は1s) 待機する
+      - DNSキャッシュを蓄積し、その後の接続に使用することができるようにするため
+- 二つ目以降の接続を開始するまでの待ち時間はConnection Attempt Delayとし、推奨値は250msとする
+  - 単純な実装では、Connection Attempt Delayは固定値とすることができる
+  - より複雑な実装では、Connection Attempt DelayをTCPの再送タイマー (RFC6298) に基づいた
+    2回目のTCP SYNを送信する時間に合わせる
+    - このアルゴリズムは最初のSYN再送の時間を概算するためだけに使用する
+      (指数関数的なタイマーのバックオフの影響を受ける可能性のあるそれ以降の再送では使用しない)
+  - クライアントが同じホストまたはプレフィックスに対して他の接続から収集したRTTデータを持っている場合、
+    この情報を利用して遅延時間を計算してもよい
+  - [MUST] Connection Attempt Delayは下限値を持つ (特に過去のデータを使用して計算される場合)
+    - Minimum Connection Attempt Delay: 推奨値は100ms
+    - 最小値は高いパケット損失率の存在下で輻輳崩壊を回避するために必要となる
+    - [MUST] 前の試行から10ms以内に後続の接続を開始しない
+  - [SHOULD] Connection Attempt Delayは上限値を持つ
+    - Maximum Connection Attempt Delay: 推奨値は2s
+
 ## 参照
 - https://datatracker.ietf.org/doc/html/rfc8305
 - https://datatracker.ietf.org/doc/html/rfc6555
+- https://datatracker.ietf.org/doc/html/rfc6724
