--- a/network/docs/_rfc8305.md
+++ b/network/docs/_rfc8305.md
@@ -84,6 +84,18 @@
   - [SHOULD] Connection Attempt Delayは上限値を持つ
     - Maximum Connection Attempt Delay: 推奨値は2s
 
+### DNS Answer Changes during Happy Eyeballs Connection Setup
+- 接続確立中、DNS回答に解決済みのアドレスが追加されたり削除されるなどした場合、
+  クライアントは現在の状況に基づいて対応する
+  - 解決済みのアドレスが追加されるケース: e.g. DNS-PUSH
+  - 解決済みのアドレスが削除されるケース: e.g. DNSレコードのTTL切れ
+- [SHOULD] 削除されたアドレスが接続開始済みの場合、接続試行は継続が許可される
+- [SHOULD] 削除されたアドレスが接続を開始していなかった場合、当該アドレスはアドレスリストから削除する
+- [SHOULD] アドレスが新たにリストへ追加された場合、Sorting Addressesに従って未試行のアドレスリストをソートする
+
+## Supporting IPv6-Only Networks with NAT64 and DNS64
+WIP
+
 ## 参照
 - https://datatracker.ietf.org/doc/html/rfc8305
 - https://datatracker.ietf.org/doc/html/rfc6555
